# mcp-tutorial-java-magazine

./: .gitignore  LICENSE  Procfile  README.md  SLIDEV_FLOW.md  checkpoint_06.sqlite-shm  checkpoint_06.sqlite-wal  pyproject.toml  requirements.txt  research_notes.md  setup_slidev.sh
my-slides/: package-lock.json  package.json  slides.md
setup_repo_instructions/: instructions_uv_setup.txt
src/: configuration.py  main copy.py  main-solution-part2.py  main-solution-part4.py  main-solution.py  main.py  run.py
src/langgraph_mcp/: 03_mcp_stdio_external_package.py  research_notes.md
src/langgraph_mcp/campaign/: research.md
src/local_mcp_server/: my_client.py  my_server.py
src/static/: chat.js
static/: chat.css  chat.html  chat.js
