[project]
name = "defensie-casus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.0",
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "fastapi==0.125.0",
    "fastmcp==2.14.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-core==1.2.2",
    "langchain-mcp-adapters==0.2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.6",
    "langgraph==1.0.5",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pipreqs>=0.5.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.20",
    "rich==14.2.0",
    "ruff>=0.11.12",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.3",
]
